Fix CSS issues on small screens. (#1153)

--- a/static/css/context-menu.css
+++ b/static/css/context-menu.css
@@ -122,3 +122,18 @@
 #edit-thing-label.error {
   color: orange;
 }
+
+@media only screen and (max-width: 800px) {
+  #edit-thing-spacer {
+    display: block;
+    margin-top: 1rem;
+  }
+
+  #edit-thing-type {
+    width: 100%;
+  }
+
+  #edit-thing-metadata {
+    padding-bottom: 1rem;
+  }
+}
